Archivo Index 100% completado!

--- a/ArchivosEjecutables/index.html
+++ b/ArchivosEjecutables/index.html
@@ -19,6 +19,23 @@
             </ul>
         </nav>
     </header>
+
+    <section class="hero">
+        <div class="hero-content">
+            <h1>MinesWeepers Latin-America 2025</h1>
+            <p>Desde el día 5 de Enero hasta el día 8 de Enero en las Ruinas de Huanchaca, Antofagasta, Chile</p>
+        </div>
+    </section>
+
+    <section class="descripcion">
+        <h2>¿Qué es MinesWeepers 2025?</h2>
+        <p>Es un congreso internacional de robótica que reúne a expertos, investigadores y entusiastas a nivel mundial.</p>
+        <p>Este evento ofrece conferencias magistrales, talleres prácticos y una exhibición de los últimos avances en tecnología robótica.</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 MinesWeepers Latin-America. All Rights Reserved.</p>
+    </footer>
     
 </body>
 </html>
